# spencers-agents

./: .env.example  .gitignore  README.md  candidate_learnings.md  content_drafts.md  content_ideas.md  mock_run_summary.md  pyproject.toml  research_brief.md  weekly_app_launch_plan.md
knowledge/: app_launch_research_packet.md  experiment_log.md  learned_patterns.md  user_preference.txt
src/social_media_planner/: crew.py  main.py  media_pipeline.py  mock_pipeline.py  models.py  research_pipeline.py
src/social_media_planner/config/: agents.yaml  tasks.yaml
tests/: test_main.py  test_mock_pipeline.py  test_research_pipeline.py
