[project]
name = "social_media_planner"
version = "0.1.0"
description = "social_media_planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai==1.10.2a1"
]

[project.scripts]
social_media_planner = "social_media_planner.main:run"
run_crew = "social_media_planner.main:run"
train = "social_media_planner.main:train"
replay = "social_media_planner.main:replay"
test = "social_media_planner.main:test"
run_with_trigger = "social_media_planner.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
